sort.basic.shell.AlgShellSort.scala.error
Erreur de compilation :
AlgShellSort:19: error: not found: value v
      setValue(m,v)
                 ^