sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var i=0
  val l=getValueCount()
  var k=0
  var m=1
  var gap:Int=l/2
      while (gap>0){
  for(i<- 1 to l-1){
    k=0
    m=i

    	while ((i-(k+1)*gap)>0){
   			if (isSmaller((i-(k+1)*gap),(i-k*gap))==false){
       		copy(i-(k+1)*gap,i-k*gap)
       		m=i-(k+1)*gap
      	}
    	k=k+1
    	setValue(m,v)
  		}
  	gap=gap/2
		}  	
	}
}